fixed z-indexes

--- a/frontend/src/styles/components/Loading.scss
+++ b/frontend/src/styles/components/Loading.scss
@@ -1,5 +1,5 @@
 .loading-screen {
-  z-index: 999;
+  z-index: 99999;
   position: fixed;
   background: $default-overlay;
   top: 0;
